--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,3 +5,29 @@
     padding: 25rem 0;
     margin-top: -20vh;
 }
+
+.section-features {
+    padding: 20rem 0;
+
+    background-image: linear-gradient(
+            /* Direction of the gradient (just one can be included too) */
+            to right bottom,
+            rgba(abstracts.$color-primary-light, 0.8),
+            rgba(abstracts.$color-primary-dark, 0.8)),
+        url('../img/nat-4.jpg');
+    background-size: cover;
+
+    transform: skewY(-7deg);
+    margin-top: -10rem;
+
+    // Select all DIRECT children of the element
+    &>* {
+        transform: skewY(7deg);
+    }
+}
+
+.section-tours {
+    background-color: abstracts.$color-grey-light-1;
+    padding: 25rem 0 50rem 0;
+    margin-top: -10rem;
+}
