Card component finished

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -141,4 +141,32 @@
             }
         }
     }
+
+    // BACK SIDE STYLING
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+
+    &__price-box {
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 8rem;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+    &__price-value {
+        font-size: 6rem;
+        // For text really big is generally more eye-pleasing
+        // to have a lighter font-weight
+        font-weight: 100;
+    }
 }
