Finished tours section

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -60,6 +60,15 @@
         }
     }
 
+    &--green {
+        background-color: abstracts.$color-primary;
+        color: abstracts.$color-white;
+
+        &::after {
+            background-color: abstracts.$color-primary;
+        }
+    }
+
     /*  
     pseudo-elements acts as if they are virtual elements existing
     on the html and can be styled
