--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,10 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.u-margin-top-huge {
+  margin-top: 10rem;
+}
+
 .btn {
   /* 
   :link is an special selector for when the element acts
@@ -222,6 +226,13 @@ body {
 }
 .btn--white::after {
   background-color: white;
+}
+.btn--green {
+  background-color: #55c57a;
+  color: white;
+}
+.btn--green::after {
+  background-color: #55c57a;
 }
 .btn::after {
   /* In an after pseudo-element, ALWAYS is necessary to specify 
@@ -377,10 +388,10 @@ body {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../img/nat-5.jpg");
 }
 .card__picture--2 {
-  background-image: url("../img/nat-5.jpg");
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url("../img/nat-6.jpg");
 }
 .card__picture--3 {
-  background-image: url("../img/nat-5.jpg");
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("../img/nat-7.jpg");
 }
 .card__heading {
   font-size: 2.8rem;
@@ -400,6 +411,12 @@ body {
 }
 .card__heading-span--1 {
   background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85));
+}
+.card__heading-span--2 {
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85));
+}
+.card__heading-span--3 {
+  background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85));
 }
 .card__details {
   padding: 3rem;
@@ -540,7 +557,7 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem;
 }
 
