--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -85,13 +85,19 @@
         &--2 {
             // Go up 1 level, because the compiled file
             // will be cc/style.css
-            background-image: url('../img/nat-5.jpg');
+            background-image: linear-gradient(to right bottom,
+                    $color-primary-light,
+                    $color-primary-dark ),
+                url('../img/nat-6.jpg');
         }
 
         &--3 {
             // Go up 1 level, because the compiled file
             // will be cc/style.css
-            background-image: url('../img/nat-5.jpg');
+            background-image: linear-gradient(to right bottom,
+                    $color-tertiary-light,
+                    $color-tertiary-dark ),
+                url('../img/nat-7.jpg');
         }
     }
 
@@ -119,6 +125,18 @@
             background-image: linear-gradient(to right bottom,
                     rgba($color-secondary-light, .85),
                     rgba($color-secondary-dark, .85));
+        }
+
+        &--2 {
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-primary-light, .85),
+                    rgba($color-primary-dark, .85));
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-tertiary-light, .85),
+                    rgba($color-tertiary-dark, .85));
         }
     }
 
