--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -31,3 +31,8 @@
     padding: 25rem 0 15rem 0;
     margin-top: -10rem;
 }
+
+.section-stories {
+    padding: 15rem 0;
+    background-color: abstracts.$color-grey-light-1;
+}
