--- a/css/style.css
+++ b/css/style.css
@@ -479,10 +479,36 @@ body {
   -webkit-clip-path: circle(50% at 50% 50%);
   clip-path: circle(50% at 50% 50%);
   transform: translateX(-3rem) skewX(12deg);
+  backface-visibility: hidden;
+  position: relative;
 }
 .story__img {
   height: 100%;
+  transform: translateX(-3.5rem) scale(1.4);
+  backface-visibility: hidden;
+  transition: all 0.4s;
 }
+.story__caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  text-align: center;
+  opacity: 0;
+  transition: all 0.4s;
+}
+.story:hover .story__caption {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+.story:hover .story__img {
+  transform: translateX(-3.5rem) scale(1.01);
+  filter: blur(3px) brightness(80%);
+}
+
 .header {
   /* To act as reference for .logo-box */
   position: relative;
