--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -37,11 +37,42 @@
         // Best way to and spacing to floats is to use
         // transform: translate instead of margin
         transform: translateX(-3rem) skewX(12deg);
+
+        backface-visibility: hidden;
+        position: relative;
     }
 
     &__img {
         height: 100%;
+        transform: translateX(-3.5rem) scale(1.4);
+
+        backface-visibility: hidden;
+        transition: all 0.4s;
     }
 
     &__text {}
+
+    &__caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        color: $color-white;
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity: 0;
+
+        transition: all 0.4s;
+    }
+
+    &:hover &__caption {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+
+    &:hover &__img {
+        transform: translateX(-3.5rem) scale(1.01);
+        filter: blur(3px) brightness(80%);
+    }
 }
