--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -4,7 +4,7 @@
     width: 75%;
     margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-    background-color: $color-white;
+    background-color: rgba($color-white, .6);
     border-radius: 3px;
     padding: 6rem;
     // To maitain content inside the box due to the __shape
@@ -49,8 +49,6 @@
         backface-visibility: hidden;
         transition: all 0.4s;
     }
-
-    &__text {}
 
     &__caption {
         position: absolute;
