--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -36,3 +36,30 @@
     position: relative;
     padding: 15rem 0;
 }
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom,
+            abstracts.$color-primary-light,
+            abstracts.$color-primary-dark);
+    z-index: -1;
+}
+
+.book {
+    background-image: linear-gradient(105deg,
+            rgba(abstracts.$color-white, 0.85) 0%,
+            rgba(abstracts.$color-white, 0.85) 49.8%,
+            transparent 50%),
+        url(../img/nat-10.jpg);
+    background-size: cover;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(abstracts.$color-black, 0.2);
+
+    // Here just for testing
+    height: 50rem;
+
+    &__form {
+        width: 50%;
+        padding: 6rem;
+    }
+}
