--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+/*
+0 - 600px: Phone
+600 - 900px: Tablet portrait
+900 - 1200px: Tablet landscape
+{1200 - 1800px}: Desktop. OUR NORMAL STYLES APPLY HERE
+1800px +: Big desktop
+*/
 /* Basix reset */
 *,
 *::after,
@@ -23,6 +30,21 @@ html {
   work with.
   */
   font-size: 62.5%;
+}
+@media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media (max-width: 56.25em) {
+  html {
+    font-size: 50%;
+  }
+}
+@media (min-width: 112.5em) {
+  html {
+    font-size: 75%;
+  }
 }
 
 body {
