--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -42,4 +42,9 @@ html {
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
