--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -37,6 +37,17 @@
             100% 75vh,
             0 100%);
 
+    @include abstracts.respond(phone) {
+        -webkit-clip-path: polygon(0 0,
+                100% 0,
+                100% 85vh,
+                0 100%);
+        clip-path: polygon(0 0,
+                100% 0,
+                100% 85vh,
+                0 100%);
+    }
+
     &__logo-box {
         position: absolute;
         /* 
