--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,6 +15,10 @@
         height: auto;
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
