--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,6 +4,10 @@
     background-color: abstracts.$color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+
+    @include abstracts.respond(tab-port) {
+        padding: 20rem 0;
+    }
 }
 
 .section-features {
@@ -24,17 +28,29 @@
     &>* {
         transform: skewY(7deg);
     }
+
+    @include abstracts.respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-tours {
     background-color: abstracts.$color-grey-light-1;
     padding: 25rem 0 15rem 0;
     margin-top: -10rem;
+
+    @include abstracts.respond(tab-port) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     position: relative;
     padding: 15rem 0;
+
+    @include abstracts.respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
