--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -22,6 +22,10 @@
 
         transition: all .3s;
 
+        @include respond(tab-port) {
+            width: 100%;
+        }
+
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -63,6 +67,11 @@
     &__radio-group {
         display: inline-block;
         width: 49%;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-label {
