--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -71,11 +71,34 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba(abstracts.$color-black, 0.2);
 
-    // Here just for testing
-    height: 50rem;
+
+    @include abstracts.respond(tab-land) {
+        background-image: linear-gradient(105deg,
+                rgba(abstracts.$color-white, 0.85) 0%,
+                rgba(abstracts.$color-white, 0.85) 64.8%,
+                transparent 65%),
+            url(../img/nat-10.jpg);
+
+    }
+
+    @include abstracts.respond(tab-port) {
+        background-image: linear-gradient(to right,
+                rgba(abstracts.$color-white, 0.85) 0%,
+                rgba(abstracts.$color-white, 0.85) 100%),
+            url(../img/nat-10.jpg);
+
+    }
 
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include abstracts.respond(tab-land) {
+            width: 65%;
+        }
+
+        @include abstracts.respond(tab-port) {
+            width: 100%;
+        }
     }
 }
