Media queries for touch devices, change selection style. HTML head for responsive to work.

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -48,3 +48,9 @@ body {
         padding: 0;
     }
 }
+
+// Style of selected text, images, etc.
+::selection {
+    background-color: $color-primary;
+    color: $color-white;
+}
