--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -188,7 +188,9 @@
         font-weight: 100;
     }
 
-    @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),
+    // Used for touch devices that cannot use hover functionality
+    only screen and (hover:none) {
         height: auto;
         border-radius: 3px;
         background-color: $color-white;
@@ -230,6 +232,7 @@
         &__price-value {
             font-size: 4rem;
         }
+
 
     }
 }
