--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -44,7 +44,11 @@ ORDER: to start responsiveness
     // In this context, 1em = 16px always
     // So previous values are divided by 16
     @if $breakpoint ==phone {
-        @media (max-width: 37.5em) {
+
+        // only screen if for media queries to be applied only to
+        // screens. E.g. if somebody would print the page, it will not
+        // be applied. Including it is considered a best practice
+        @media only screen and (max-width: 37.5em) {
             // 600px
             // @content is a block of code that can be passed to the
             // mixin inside the curly braces
@@ -53,21 +57,21 @@ ORDER: to start responsiveness
     }
 
     @if $breakpoint ==tab-port {
-        @media (max-width: 56.25em) {
+        @media only screen and (max-width: 56.25em) {
             // 900px
             @content;
         }
     }
 
     @if $breakpoint ==tab-land {
-        @media (max-width: 75em) {
+        @media only screen and (max-width: 75em) {
             // 1200px
             @content;
         }
     }
 
     @if $breakpoint ==big-desktop {
-        @media (min-width: 112.5em) {
+        @media only screen and (min-width: 112.5em) {
             // 1800px
             @content;
         }
