--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -47,10 +47,10 @@
     // Apple ¿redmi? screen, it's usually used as reference
     // High resolution screen
     // The , acts as an OR
-    @media (min-resolution: 192dpi) and (min-width: 37.5em),
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     // for safari
-    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    (min-width: 125em) {
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
         background-image: linear-gradient(
                 /* Direction of the gradient (just one can be included too) */
                 to right bottom,
